--- a/DoorofSoul.Client/DoorofSoul.Client.CSharp.Plugins.csproj
+++ b/DoorofSoul.Client/DoorofSoul.Client.CSharp.Plugins.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Assets\Plugins\Communication\Managers\EventManagers.cs" />
     <Compile Include="Assets\Plugins\Communication\Managers\EventManagers\EventManager.cs" />
     <Compile Include="Assets\Plugins\Communication\Managers\OperationManagers.cs" />
+    <Compile Include="Assets\Plugins\Communication\Managers\OperationManagers\FetchDataOperationManager.cs" />
     <Compile Include="Assets\Plugins\Communication\Managers\OperationManagers\OperationManager.cs" />
     <Compile Include="Assets\Plugins\Communication\Managers\ResponseManagers.cs" />
     <Compile Include="Assets\Plugins\Communication\Managers\ResponseManagers\ResponseManager.cs" />
