--- a/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
+++ b/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
@@ -43,14 +43,19 @@
   <ItemGroup>
     <Compile Include="ErrorCode.cs" />
     <Compile Include="EventCode.cs" />
+    <Compile Include="EventParameters\InformDataEventParameterCode.cs" />
+    <Compile Include="FetchDataCode.cs" />
+    <Compile Include="FetchDataParameters\FetchSystemVersionParameterCode.cs" />
+    <Compile Include="InformDataCode.cs" />
+    <Compile Include="InformDataParameters\InformFetchDataError.cs" />
+    <Compile Include="InformDataParameters\InformSystemVersionParameterCode.cs" />
     <Compile Include="OperationCode.cs" />
+    <Compile Include="OperationParameters\FetchDataOperationParameterCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseParameters\OperationErrorResponseParameterCode.cs" />
+    <Compile Include="SupportLauguages.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="EventParameters\" />
-    <Folder Include="OperationParameters\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
