--- a/DoorofSoul.Client/DoorofSoul.Client.CSharp.csproj
+++ b/DoorofSoul.Client/DoorofSoul.Client.CSharp.csproj
@@ -81,6 +81,8 @@
     <Compile Include="Assets\Scripts\Communications\PhotonServiceController.cs" />
     <Compile Include="Assets\Scripts\Systems\DebugController.cs" />
     <Compile Include="Assets\Scripts\Systems\SystemVersionController.cs" />
+    <Compile Include="Assets\Scripts\Uis\DraggablePanel.cs" />
+    <Compile Include="Assets\Scripts\Uis\ErrorInformPanel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
