--- a/DoorofSoul.Server/DoorofSoul.Server.csproj
+++ b/DoorofSoul.Server/DoorofSoul.Server.csproj
@@ -66,9 +66,15 @@
     <Compile Include="Operations\OperationHandler.cs" />
     <Compile Include="Operations\OperationManager.cs" />
     <Compile Include="Peer.cs" />
+    <Compile Include="PlayerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerPlayer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DoorofSoul.Library.General\DoorofSoul.Library.General.csproj">
+      <Project>{28e98488-b39a-471d-ae89-740f9c09f7d8}</Project>
+      <Name>DoorofSoul.Library.General</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DoorofSoul.Library\DoorofSoul.Library.csproj">
       <Project>{352197e1-395e-4d07-9844-2c8918016303}</Project>
       <Name>DoorofSoul.Library</Name>
