--- a/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
+++ b/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
@@ -51,6 +51,7 @@
     <Compile Include="InformDataParameters\InformSystemVersionParameterCode.cs" />
     <Compile Include="OperationCode.cs" />
     <Compile Include="OperationParameters\FetchDataOperationParameterCode.cs" />
+    <Compile Include="OperationParameters\PlayerLoginOperationParameterCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseParameters\OperationErrorResponseParameterCode.cs" />
     <Compile Include="SupportLauguages.cs" />
