--- a/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
+++ b/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
@@ -54,6 +54,7 @@
     <Compile Include="OperationParameters\PlayerLoginOperationParameterCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseParameters\OperationErrorResponseParameterCode.cs" />
+    <Compile Include="ResponseParameters\PlayerLoginResponseParameterCode.cs" />
     <Compile Include="SupportLauguages.cs" />
   </ItemGroup>
   <ItemGroup />
