--- a/DoorofSoul.Client/DoorofSoul.Client.CSharp.csproj
+++ b/DoorofSoul.Client/DoorofSoul.Client.CSharp.csproj
@@ -70,6 +70,9 @@
     <Reference Include="Photon3Unity3D">
       <HintPath>Assets\Plugins\DLL\Photon3Unity3D.dll</HintPath>
     </Reference>
+    <Reference Include="DoorofSoul.Library.General">
+      <HintPath>Assets\Plugins\DLL\DoorofSoul.Library.General.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="DoorofSoul.Client.CSharp.Plugins.csproj">
@@ -78,12 +81,18 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Authentications\PlayerLoginController.cs" />
+    <Compile Include="Assets\Scripts\Authentications\PlayerLogoutController.cs" />
     <Compile Include="Assets\Scripts\Communications\PhotonServiceController.cs" />
     <Compile Include="Assets\Scripts\Systems\DebugController.cs" />
     <Compile Include="Assets\Scripts\Systems\ErrorInformController.cs" />
+    <Compile Include="Assets\Scripts\Systems\EternalObject.cs" />
+    <Compile Include="Assets\Scripts\Systems\SystemSettingController.cs" />
     <Compile Include="Assets\Scripts\Systems\SystemVersionController.cs" />
     <Compile Include="Assets\Scripts\Uis\DraggablePanel.cs" />
     <Compile Include="Assets\Scripts\Uis\ErrorInformPanel.cs" />
+    <Compile Include="Assets\Scripts\Uis\InputNavigationController.cs" />
+    <Compile Include="Assets\Scripts\Uis\PlayerLoginUI.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
