--- a/DoorofSoul.Library/DoorofSoul.Library.csproj
+++ b/DoorofSoul.Library/DoorofSoul.Library.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Hexagram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="World.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DoorofSoul.Library.General\DoorofSoul.Library.General.csproj">
