--- a/DoorofSoul.Library/DoorofSoul.Library.csproj
+++ b/DoorofSoul.Library/DoorofSoul.Library.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Authority\SceneEye.cs" />
     <Compile Include="Hexagram.cs" />
+    <Compile Include="Nature.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Throne.cs" />
     <Compile Include="World.cs" />
