--- a/DoorofSoul.Server/DoorofSoul.Server.csproj
+++ b/DoorofSoul.Server/DoorofSoul.Server.csproj
@@ -64,6 +64,10 @@
     <Compile Include="Operations\Handlers\CreateSoulHandler.cs" />
     <Compile Include="Operations\Handlers\DeleteSoulHandler.cs" />
     <Compile Include="Operations\Handlers\FetchDataHandler.cs" />
+    <Compile Include="Operations\Handlers\FetchDataHandlers\FetchAnswerHandler.cs" />
+    <Compile Include="Operations\Handlers\FetchDataHandlers\FetchContainersHandler.cs" />
+    <Compile Include="Operations\Handlers\FetchDataHandlers\FetchSoulContainerConnectionsHandler.cs" />
+    <Compile Include="Operations\Handlers\FetchDataHandlers\FetchSoulsHandler.cs" />
     <Compile Include="Operations\Handlers\FetchDataHandlers\FetchSystemVersionHandler.cs" />
     <Compile Include="Operations\Handlers\FetchDataManager.cs" />
     <Compile Include="Operations\Handlers\PlayerLoginHandler.cs" />
