--- a/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
+++ b/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
@@ -47,6 +47,8 @@
     <Compile Include="DSVector3.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="EntityProperties.cs" />
+    <Compile Include="Events\Managers\PlayerSceneEventManager.cs" />
+    <Compile Include="Events\PlayerEventManagers.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scene.cs" />
@@ -58,6 +60,7 @@
       <Name>DoorofSoul.Protocol.Communication</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
