--- a/DoorofSoul.Library/DoorofSoul.Library.csproj
+++ b/DoorofSoul.Library/DoorofSoul.Library.csproj
@@ -36,6 +36,10 @@
     <Reference Include="DoorofSoul.Database">
       <HintPath>..\DoorofSoul.Database\bin\Debug\DoorofSoul.Database.dll</HintPath>
     </Reference>
+    <Reference Include="ExitGamesLibs, Version=1.0.4.0, Culture=neutral, PublicKeyToken=eac0edd9746a4aa0, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Server\Photon-OnPremise-Server-SDK_v4-0-29-11263\lib\ExitGamesLibs.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
