--- a/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
+++ b/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
@@ -46,14 +46,17 @@
     <Compile Include="EventParameters\InformDataEventParameterCode.cs" />
     <Compile Include="EventParameters\ObserveEntityEventParameterCode.cs" />
     <Compile Include="FetchDataCode.cs" />
-    <Compile Include="FetchDataParameters\FetchSystemVersionParameterCode.cs" />
+    <Compile Include="FetchDataParameters\FetchSceneEntitiesInformationParameterCode.cs" />
+    <Compile Include="FetchDataParameters\FetchSceneParameterCode.cs" />
     <Compile Include="InformDataCode.cs" />
     <Compile Include="InformDataParameters\InformAnswerParameterCode.cs" />
     <Compile Include="InformDataParameters\InformContainerParameterCode.cs" />
     <Compile Include="InformDataParameters\InformEntityTransformParameterCode.cs" />
     <Compile Include="InformDataParameters\InformEntityVelocityParameterCode.cs" />
     <Compile Include="InformDataParameters\InformFetchDataError.cs" />
-    <Compile Include="InformDataParameters\InformSceneEntityInformationParameterCode.cs" />
+    <Compile Include="InformDataParameters\InformSceneEntityEnterParameterCode.cs" />
+    <Compile Include="InformDataParameters\InformSceneEntityExitParameterCode.cs" />
+    <Compile Include="InformDataParameters\InformSceneParameterCode.cs" />
     <Compile Include="InformDataParameters\InformSoulContainerConnectionParameterCode.cs" />
     <Compile Include="InformDataParameters\InformSoulParameterCode.cs" />
     <Compile Include="InformDataParameters\InformSystemVersionParameterCode.cs" />
@@ -65,6 +68,7 @@
     <Compile Include="OperationParameters\PlayerLoginOperationParameterCode.cs" />
     <Compile Include="OperationParameters\ReportObserveEntityResultOperationParameterCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResponseParameters\ActiveSoulResponseParameterCode.cs" />
     <Compile Include="ResponseParameters\OperationErrorResponseParameterCode.cs" />
     <Compile Include="ResponseParameters\PlayerLoginResponseParameterCode.cs" />
     <Compile Include="SupportLauguages.cs" />
