--- a/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
+++ b/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
@@ -50,23 +50,46 @@
     <Compile Include="EntityProperties.cs" />
     <Compile Include="Events\Handlers\AnswerEventHandler.cs" />
     <Compile Include="Events\Handlers\Answer\ContainerEventResolver.cs" />
+    <Compile Include="Events\Handlers\Answer\InformDataHandler.cs" />
     <Compile Include="Events\Handlers\Answer\InformDataResolver.cs" />
+    <Compile Include="Events\Handlers\Answer\InformData\InformContainerHandler.cs" />
+    <Compile Include="Events\Handlers\Answer\InformData\InformFetchDataErrorHandler.cs" />
+    <Compile Include="Events\Handlers\Answer\InformData\InformSoulContainerLinkHandler.cs" />
+    <Compile Include="Events\Handlers\Answer\InformData\InformSoulHandler.cs" />
     <Compile Include="Events\Handlers\Answer\SoulEventResolver.cs" />
     <Compile Include="Events\Handlers\ContainerEventHandler.cs" />
+    <Compile Include="Events\Handlers\Container\InformDataHandler.cs" />
     <Compile Include="Events\Handlers\Container\InformDataResolver.cs" />
+    <Compile Include="Events\Handlers\Container\InformData\InformFetchDataErrorHandler.cs" />
     <Compile Include="Events\Handlers\EntityEventHandler.cs" />
+    <Compile Include="Events\Handlers\Entity\InformDataHandler.cs" />
     <Compile Include="Events\Handlers\Entity\InformDataResolver.cs" />
+    <Compile Include="Events\Handlers\Entity\InformData\InformFetchDataErrorHandler.cs" />
     <Compile Include="Events\Handlers\PlayerEventHandler.cs" />
     <Compile Include="Events\Handlers\Player\AnswerEventResolver.cs" />
+    <Compile Include="Events\Handlers\Player\InformDataHandler.cs" />
     <Compile Include="Events\Handlers\Player\InformDataResolver.cs" />
+    <Compile Include="Events\Handlers\Player\InformData\InformAnswerErrorHandler.cs" />
+    <Compile Include="Events\Handlers\Player\InformData\InformFetchDataErrorHandler.cs" />
+    <Compile Include="Events\Handlers\Player\InformData\InformSystemVersionHandler.cs" />
     <Compile Include="Events\Handlers\SceneEventHandler.cs" />
     <Compile Include="Events\Handlers\Scene\ContainerEventResolver.cs" />
     <Compile Include="Events\Handlers\Scene\EntityEventResolver.cs" />
+    <Compile Include="Events\Handlers\Scene\InformDataHandler.cs" />
     <Compile Include="Events\Handlers\Scene\InformDataResolver.cs" />
+    <Compile Include="Events\Handlers\Scene\InformData\InformEntityEnterHandler.cs" />
+    <Compile Include="Events\Handlers\Scene\InformData\InformEntityExitHandler.cs" />
+    <Compile Include="Events\Handlers\Scene\InformData\InformEntityHandler.cs" />
+    <Compile Include="Events\Handlers\Scene\InformData\InformFetchDataErrorHandler.cs" />
     <Compile Include="Events\Handlers\SoulEventHandler.cs" />
+    <Compile Include="Events\Handlers\Soul\InformDataHandler.cs" />
     <Compile Include="Events\Handlers\Soul\InformDataResolver.cs" />
+    <Compile Include="Events\Handlers\Soul\InformData\InformFetchDataErrorHandler.cs" />
     <Compile Include="Events\Handlers\WorldEventHandler.cs" />
+    <Compile Include="Events\Handlers\World\InformDataHandler.cs" />
     <Compile Include="Events\Handlers\World\InformDataResolver.cs" />
+    <Compile Include="Events\Handlers\World\InformData\InformFetchDataErrorHandler.cs" />
+    <Compile Include="Events\Handlers\World\InformData\InformSceneHandler.cs" />
     <Compile Include="Events\Handlers\World\SceneEventResolver.cs" />
     <Compile Include="Events\Managers\AnswerEventManager.cs" />
     <Compile Include="Events\Managers\ContainerEventManager.cs" />
