--- a/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
+++ b/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
@@ -62,13 +62,19 @@
     <Compile Include="FetchDataCodes\SceneFetchDataCode.cs" />
     <Compile Include="FetchDataCodes\SoulFetchDataCode.cs" />
     <Compile Include="FetchDataCodes\WorldFetchDataCode.cs" />
+    <Compile Include="FetchDataResponseParameters\Answer\FetchContainersResponseParameterCode.cs" />
+    <Compile Include="FetchDataResponseParameters\Answer\FetchSoulContainerLinksResponseParameterCode.cs" />
+    <Compile Include="FetchDataResponseParameters\Answer\FetchSoulsResponseParameterCode.cs" />
+    <Compile Include="FetchDataResponseParameters\Player\FetchAnswerResponseParameterCode.cs" />
+    <Compile Include="FetchDataResponseParameters\Player\FetchSceneResponseParameterCode.cs" />
+    <Compile Include="FetchDataResponseParameters\Player\FetchSystemVersionResponseParameterCode.cs" />
+    <Compile Include="FetchDataResponseParameters\Scene\FetchEntitiesResponseParameterCode.cs" />
     <Compile Include="InformDataCodes\AnswerInformDataCode.cs" />
     <Compile Include="InformDataCodes\ContainerInformDataCode.cs" />
     <Compile Include="InformDataCodes\EntityInformDataCode.cs" />
     <Compile Include="InformDataCodes\SceneInformDataCode.cs" />
     <Compile Include="InformDataCodes\SoulInformDataCode.cs" />
     <Compile Include="InformDataCodes\WorldInformDataCode.cs" />
-    <Compile Include="InformDataParameters\Scene\InformEntityParameterCode.cs" />
     <Compile Include="OperationCodes\AnswerOperationCode.cs" />
     <Compile Include="OperationCodes\ContainerOperationCode.cs" />
     <Compile Include="OperationCodes\EntityOperationCode.cs" />
@@ -78,14 +84,8 @@
     <Compile Include="FetchDataCodes\PlayerFetchDataCode.cs" />
     <Compile Include="FetchDataParameters\Player\FetchSceneParameterCode.cs" />
     <Compile Include="InformDataCodes\PlayerInformDataCode.cs" />
-    <Compile Include="InformDataParameters\Player\InformAnswerParameterCode.cs" />
-    <Compile Include="InformDataParameters\Answer\InformContainerParameterCode.cs" />
     <Compile Include="InformDataParameters\Scene\InformEntityEnterParameterCode.cs" />
-    <Compile Include="InformDataParameters\Scene\InformSceneEntityExitParameterCode.cs" />
-    <Compile Include="InformDataParameters\Player\InformSceneParameterCode.cs" />
-    <Compile Include="InformDataParameters\Answer\InformSoulContainerConnectionParameterCode.cs" />
-    <Compile Include="InformDataParameters\Answer\InformSoulParameterCode.cs" />
-    <Compile Include="InformDataParameters\Player\InformSystemVersionParameterCode.cs" />
+    <Compile Include="InformDataParameters\Scene\InformEntityExitParameterCode.cs" />
     <Compile Include="OperationCodes\OperationCode.cs" />
     <Compile Include="OperationCodes\PlayerOperationCode.cs" />
     <Compile Include="OperationCodes\WorldOperationCode.cs" />
@@ -105,7 +105,7 @@
     <Compile Include="ResponseParameters\Answer\ActiveSoulResponseParameterCode.cs" />
     <Compile Include="ResponseParameters\Answer\ContainerResponseParameterCode.cs" />
     <Compile Include="ResponseParameters\Answer\SoulResponseParameterCode.cs" />
-    <Compile Include="ResponseParameters\FetchDataResponseParameterCode.cs" />
+    <Compile Include="FetchDataResponseParameters\FetchDataResponseParameterCode.cs" />
     <Compile Include="ResponseParameters\OperationErrorResponseParameterCode.cs" />
     <Compile Include="ResponseParameters\Player\AnswerResponseParameterCode.cs" />
     <Compile Include="ResponseParameters\Player\PlayerLoginResponseParameterCode.cs" />
@@ -126,8 +126,14 @@
     <Folder Include="FetchDataParameters\Scene\" />
     <Folder Include="FetchDataParameters\Soul\" />
     <Folder Include="FetchDataParameters\World\" />
+    <Folder Include="FetchDataResponseParameters\Container\" />
+    <Folder Include="FetchDataResponseParameters\Entity\" />
+    <Folder Include="FetchDataResponseParameters\Soul\" />
+    <Folder Include="FetchDataResponseParameters\World\" />
+    <Folder Include="InformDataParameters\Answer\" />
     <Folder Include="InformDataParameters\Container\" />
     <Folder Include="InformDataParameters\Entity\" />
+    <Folder Include="InformDataParameters\Player\" />
     <Folder Include="InformDataParameters\Soul\" />
     <Folder Include="InformDataParameters\World\" />
     <Folder Include="OperationParameters\Container\" />
